--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Run files.py script
       run: |
-        python google_automate/files.py
+        python gmail_automate/files.py
