--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
     #   run: |
     #     python -m pip install --upgrade pip
     #     pip install -r google_automate/requirements.txt  # Install dependencies if applicable
+    - name: check cwd
+      run: pwd 
 
     - name: Run files.py script
       run: |
-        python gmail_automate/files.py
+        python gmail_automate/send_reminder.py
