--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Run at 6:00 PM UTC on Monday to Friday (cron format)
     - cron: '30 17 * * 1-5'
+  workflow_dispatch:
 
 jobs:
   run-script:
