--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: check for changes in the python file
       run: | 
-          diff_name=$(git diff --name-only origin/main...HEAD | grep -E '^.*py$' || echo "")
+          diff_name=$(git diff --name-only origin/master...HEAD | grep -E '^.*py$' || echo "")
           echo $diff_name
 
       
