--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -39,6 +39,9 @@ jobs:
             for file in $diff_name; do 
               echo "inside the file loop"
               echo $file
+              IFS='\ ' read -r -a array <<< $file
+              folder_name=$(array[0])
+              file_name=$(array[1])
             done 
               
           fi
