--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -27,6 +27,7 @@ jobs:
         fetch-depth: 0
 
     - name: check for changes in the python file
+      shell: bash
       run: | 
           diff_name=$(git diff --name-only origin/master...HEAD | grep -E '^.*py$' || echo "")
           echo $(pwd)
