--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,5 @@ jobs:
         PASSWORD_AUTO: ${{ secrets.PASSWORD_AUTO }}
         TIME_TO_SLEEP: ${{ vars.TIME_TO_SLEEP }}
       run: |
-        echo "Hello"
-        # python gmail_automate/send_reminder.py
+        python gmail_automate/send_reminder.py
       
